src/widgets/widgets/qmainwindowlayout_p.h
@@ -314,6 +314,7 @@ public:
     QDockWidget *activeTabbedDockWidget() const;
 #endif
     void destroyOrHideIfEmpty();
+    bool hasVisibleDockWidgets() const;
     void adjustFlags();
     bool hasNativeDecos() const;
 
